# pickleball-prediction-app

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
data/: pickleball_matches.csv  pickleball_model.joblib
notebooks/: model_building.ipynb  pickleball_dataset.ipynb
src/pickleball/: __init__.py  main.py
src/pickleball/api/: __init__.py
src/pickleball/models/: __init__.py
static/: index.html
