[project]
name = "pickleball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "joblib>=1.5.1",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "uvicorn>=0.32.1",
    "pydantic>=2.0.0",
    "scikit-learn==1.6.1",
    "ipykernel>=6.30.0",
]
